# structura

./: .gitignore  ABSBOX_ANALYSIS_AND_JSON_DSL_PLAN.md  CHANGELOG.md  Dockerfile  Hastructure.cabal  Hastructure.nix  LICENSE  MONITORING_EXAMPLES.md  MONITORING_SYSTEM.md  README.md  STATUS.md  build.nix  config.yml  debug_pool.cpp  docker-compose.yml  hackage.nix  justfile  release.nix  shell-stack.nix  shell.nix  stack.yaml  swagger.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image-dev-by-tag.yml  docker-image-dev.yml  docker-image.yml  haskell.yml
app/: Main.hs  MainBase.hs
cpp-engine/: CMakeLists.txt
cpp-engine/examples/: COMPREHENSIVE_WORKFLOW_DEMO.md  comprehensive_workflow_demo.cpp  quantlib_test.cpp  simple_demo.cpp  simple_demo.cpp.backup  simple_workflow_demo.cpp  structura_demo.cpp
cpp-engine/src/analytics/: analytics_engine.cpp  analytics_engine.h
cpp-engine/src/api/: api_server.cpp  api_server.h  api_server_main.cpp  schema_validator.cpp  schema_validator.h
cpp-engine/src/assets/: asset_base.cpp  asset_base.h  auto_loan.cpp  auto_loan.h  consumer_installment.cpp  consumer_installment.h  corporate_loan.cpp  corporate_loan.h  credit_card.cpp  credit_card.h  fixed_asset.cpp  fixed_asset.h  lease.cpp  lease.h  mortgage.cpp  mortgage.h  pool.cpp  pool.h  pool_impl.h  projected_cash_flow.cpp  projected_cash_flow.h  receivable.cpp  receivable.h  student_loan.cpp  student_loan.h
cpp-engine/src/core/: account.cpp.backup  account.h  cashflow.cpp  cashflow.h  date_utils.cpp  date_utils.cpp.backup  date_utils_enhanced.cpp  date_utils_enhanced.h  deal_base.cpp  deal_base.h  enhanced_utils.cpp  enhanced_utils.h  financial_types.h  interest_rate.cpp  interest_rate.h  types.cpp  types.cpp.backup  types.h  types.h.backup
cpp-engine/src/deals/: bond_deal.cpp  bond_deal.h  clo_deal.cpp  clo_deal.h  clo_deal_full.cpp  consumer_abs_deal.cpp  consumer_abs_deal.h  lease_abs_deal.cpp  lease_abs_deal.h  mortgage_deal.cpp  mortgage_deal.h  simple_lease_deal.cpp  simple_lease_deal.h
cpp-engine/src/entities/: bond.cpp  bond.h  deal.cpp  deal.h  fee.cpp  fee.h
cpp-engine/src/monitoring/: monitoring_engine.cpp  monitoring_engine.h
cpp-engine/src/reporting/: reporting_engine.cpp  reporting_engine.h
cpp-engine/src/validation/: validation_engine.cpp  validation_engine.h
cpp-engine/tests/: account_test.cpp  analytics_engine_test.cpp  asset_base_test.cpp  auto_loan_test.cpp  basic_test.cpp  bond_test.cpp  cashflow_test.cpp  credit_card_test.cpp  date_test.cpp  date_utils_enhanced_test.cpp  deal_base_test.cpp  deal_structure_test.cpp  enhanced_utils_test.cpp  financial_types_test.cpp  interest_rate_test.cpp  lease_abs_deal_test.cpp  monitoring_engine_test.cpp  mortgage_test.cpp  new_asset_test.cpp  pool_test.cpp  reporting_engine_test.cpp  validation_engine_test.cpp
src/: Accounts.hs  Analytics.hs  Asset.hs  Assumptions.hs  Call.hs  Cashflow.hs  CreditEnhancement.hs  DateUtil.hs  Deal.hs  Errors.hs  Expense.hs  Hedge.hs  InterestRate.hs  Interface.hs  Ledger.hs  Liability.hs  Lib.hs  Pool.hs  Reports.hs  Revolving.hs  Stmt.hs  Triggers.hs  Types.hs  Util.hs  Validation.hs  Waterfall.hs
src/AssetClass/: AssetBase.hs  AssetCashflow.hs  FixedAsset.hs  Installment.hs  Lease.hs  Loan.hs  MixedAsset.hs  Mortgage.hs  ProjectedCashFlow.hs  Receivable.hs
src/Deal/: DealAction.hs  DealBase.hs  DealCollection.hs  DealDate.hs  DealMod.hs  DealQuery.hs  DealRun.hs  DealValidation.hs
test/: MainTest.hs
test/DealTest/: DealTest.hs  MultiPoolDealTest.hs  ResecDealTest.hs  RevolvingTest.hs
test/UT/: AccountTest.hs  AnalyticsTest.hs  AssetTest.hs  BondTest.hs  CashflowTest.hs  CeTest.hs  DealTest.hs  DealTest2.hs  ExpTest.hs  InterestRateTest.hs  LibTest.hs  QueryTest.hs  RateHedgeTest.hs  StmtTest.hs  UtilTest.hs
